# oxygen-style

./: .gitignore  CMakeLists.txt  plasma-oxygen.spec
color-schemes/: HazelDark.colors
cursors/Oxygen_Black/cursors/: ne-resize  w-resize
cursors/Oxygen_Blue/cursors_scalable/: text  whats_this
cursors/Oxygen_White/cursors/: not-allowed  nwse-resize  sb_v_double_arrow
cursors/Oxygen_White/cursors_scalable/: col-resize
cursors/Oxygen_Yellow/cursors/: row-resize
cursors/Oxygen_Yellow/cursors_scalable/: watch
cursors/Oxygen_Zion/cursors_scalable/: dnd-copy  move  size_all
desktoptheme/: CMakeLists.txt
desktoptheme/oxygen-remix/: CMakeLists.txt  metadata.json.cmake
kdecoration/: oxygen.h
kirigami-plasmadesktop-integration/: CMakeLists.txt
kstyle/: oxygen.h  oxygenstyle.cpp  oxygenstyle.cpp.orig  oxygenstylehelper.cpp
liboxygen/: oxygenhelper.h
qtquickcontrols/: CMakeLists.txt  SearchField.qml  configure-oxygen.sh
